fixing double Scroller problem

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,19 +14,38 @@
   }
 }
 
-html, body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+html {
   overflow-x: hidden;
-  max-width: 100vw;
+  overflow-y: scroll;
   width: 100%;
   margin: 0;
   padding: 0;
+  background: var(--background);
+  color: var(--foreground);
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  min-height: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background: var(--background);
+  color: var(--foreground);
 }
 
 * {
   box-sizing: border-box;
+}
+
+html, body {
+  max-width: 100%;
+}
+
+body {
+  position: relative;
 }
 
 
